--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "correspondent",
   "version": "0.1.0",
   "private": true,
+  "main": "parse-cli.js",
   "dependencies": {
+    "@ibiwan/http-message-parser": "^0.0.34",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dedent": "^0.7.0",
+    "fast-xml-parser": "^4.0.11",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "yaml": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
