--- a/package.json
+++ b/package.json
@@ -3,27 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "main": "parse-cli.js",
+  "type": "module",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "clip": "node clip/run.js"
+  },
   "dependencies": {
-    "@ibiwan/http-message-parser": "^0.0.34",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dedent": "^0.7.0",
+    "@ibiwan/http-message-parser": "^0.1.1",
     "fast-xml-parser": "^4.0.11",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^3.0.4",
     "yaml": "^2.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3"
   }
 }
