--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@ibiwan/http-message-parser": "^0.1.1",
+    "blessed": "^0.1.81",
     "fast-xml-parser": "^4.0.11",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "readline": "^1.3.0",
     "uuid": "^9.0.0",
     "web-vitals": "^3.0.4",
     "yaml": "^2.1.3"
