--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "clip": "node clip/run.js"
+    "clip": "node built/clip/run.js"
   },
   "dependencies": {
     "@ibiwan/http-message-parser": "^0.1.1",
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "readline": "^1.3.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "web-vitals": "^3.0.4",
     "yaml": "^2.1.3"
